# cosmic_ddd

./: README.md  makefile  pyproject.toml
cosmic_ddd/application/: pyproject.toml
cosmic_ddd/domain/: error.py  pyproject.toml
cosmic_ddd/domain/shared/: entities.py  value_objects.py
cosmic_ddd/infrastructure/: pyproject.toml
cosmic_ddd/presentation/: pyproject.toml
