[tool.poetry]
name = "cosmic-ddd"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cosmic_ddd", from = "." },
    { include = "cosmic_ddd/application" },
    { include = "cosmic_ddd/domain" },
    { include = "cosmic_ddd/presentation" },
    { include = "cosmic_ddd/infrastructure" },
]


[tool.poetry.dependencies]
python = "^3.11"
application = { path = "cosmic_ddd/application" }
domain = { path = "cosmic_ddd/domain" }
presentation = { path = "cosmic_ddd/presentation" }
infrastructure = { path = "cosmic_ddd/infrastructure" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.2.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 89
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",
    "B",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = [
    "A001",
    "A002",
    "ANN001",
    "ANN101",
    "ANN102",
    "D211",
    "D212",
    "D107",
    "Q000",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
