[tool.poetry]
name = "presentation"
version = "0.1.0"
description = "Presentation layer of cosmic-ddd"
authors = ["mbalzert@gmail.com"]
packages = [{ include = "presentation" }]

[tool.poetry.dependencies]
python = "^3.11"
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
